--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "ui-kit",
+  "name": "tim-uikit",
   "private": true,
   "version": "0.0.0",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "rollup -c",
+    "prepublishOnly": "npm run build",
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -19,6 +24,9 @@
   "devDependencies": {
     "@chromatic-com/storybook": "3",
     "@eslint/js": "^9.21.0",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@storybook/addon-essentials": "8.6.6",
     "@storybook/addon-onboarding": "8.6.6",
     "@storybook/blocks": "8.6.6",
@@ -37,6 +45,8 @@
     "eslint-plugin-storybook": "^0.11.4",
     "globals": "^15.15.0",
     "playwright": "^1.51.0",
+    "rollup": "^4.35.0",
+    "rollup-plugin-dts": "^6.1.1",
     "storybook": "8.6.6",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
