--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,15 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+    "compilerOptions": {
+      "outDir": "dist",
+      "declaration": true,
+      "module": "ESNext",
+      "target": "ES5",
+      "jsx": "react",
+      "esModuleInterop": true,
+      "moduleResolution": "node",
+      "strict": true
+    },
+    "include": ["src/**/*"],
+    "exclude": ["**/*.stories.tsx", "**/*.stories.ts", ".storybook"]
+
 }
